@@ -40,7 +40,9 @@ public abstract class EntityGroup extends BaseCommand {
     List<bio.terra.tanagra.underlay.entitymodel.entitygroup.EntityGroup> entityGroups =
         entityGroupNames.allEntityGroups
             ? underlay.getEntityGroups()
-            : entityGroupNames.names.stream().map(underlay::getEntityGroup).toList();
+            : entityGroupNames.names.stream()
+                .map(underlay::getEntityGroup)
+                .collect(Collectors.toList());
     List<SequencedJobSet> jobSets =
         entityGroups.stream()
             .map(
